--- a/auto_deploy_ubuntu/master.yml
+++ b/auto_deploy_ubuntu/master.yml
@@ -6,5 +6,9 @@
   #pre_task:
   
   roles:
-     - install_linux_pkg    
-
+     - install_system    
+     - install_editor
+     - install_media
+     - install_application
+     - install_webbrowser
+      
