install.sh added

--- a/auto_deploy_ubuntu/install_system/tasks/main.yml
+++ b/auto_deploy_ubuntu/install_system/tasks/main.yml
@@ -189,6 +189,15 @@
    state: latest
    only_upgrade:
    fail_on_autoremove: yes
+
+- name: Installing bleachbit
+  ansible.builtin.apt:
+   update_cache: true
+   update_cache_retries: 10
+   name: bleachbit
+   state: latest
+   only_upgrade:
+   fail_on_autoremove: yes   
    
 
 #- name: Running apt --fix-broken install 
