--- a/ubuntu/install_media/tasks/main.yml
+++ b/ubuntu/install_media/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 #- name: Installing 
 #  ansible.builtin.apt:
-#   update_cache: true
+#   #update_cache: true
 #   update_cache_retries: 10
 #   pkg: 
 #   - htop
@@ -14,7 +14,7 @@
 
 - name: Installing vlc
   ansible.builtin.apt:
-   update_cache: true
+   #update_cache: true
    update_cache_retries: 10
    name: vlc
    state: latest
@@ -24,7 +24,7 @@
 
 - name: Installing gstreamer1.0-libav
   ansible.builtin.apt:
-   update_cache: true
+   #update_cache: true
    update_cache_retries: 10
    name: gstreamer1.0-libav
    state: latest
@@ -34,7 +34,7 @@
 
 - name: Installing gstreamer1.0-plugins-bad
   ansible.builtin.apt:
-   update_cache: true
+   #update_cache: true
    update_cache_retries: 10
    name: gstreamer1.0-plugins-bad
    state: latest
@@ -44,7 +44,7 @@
 
 - name: Installing ffmpeg
   ansible.builtin.apt:
-   update_cache: true
+   #update_cache: true
    update_cache_retries: 10
    name: ffmpeg
    state: latest
